[package]
name = "rug"
version = "0.1.0"
authors = ["Frankie Baffa <frankie.baffa@gentryhealthservices.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "3.0.0-beta.2"

[dependencies.htmlbuilder]
path = "./htmlbuilder"

